# Minesweeper

Buscaminas/: CMakeLists.txt  Game.cpp  Game_settings.cpp  Menu.cpp  main.cpp
Buscaminas/Headers/: Game.h  Game_settings.h  Global_settings.h  Menu.h
